# huawei_od_practice

./: .gitignore  readme.md
2025/C/imsi_matcher/: CMakeLists.txt  description.txt
2025/C/imsi_matcher/test/: input.txt  verify_test.py
backtrack/access_restricted_elevator/: description.md
backtrack/game_team_balancing/: main.cpp
backtrack/imsi_matcher/: main.cpp
backtrack/split_string/: main.cpp
backtrack/valid_tuple_count/: main.cpp
bfs/automatic_parking/: description.txt  main.cpp
bfs/data_assimilation/: description.txt  main.cpp
bfs/grid/straight_to_huanglong/: CMakeLists.txt  main.cpp
bfs/hiking_on_weekends/: description.txt  main.cpp
bfs/matrix_diffusion/: main.cpp
bfs/networkable_servers/: description.txt  main.cpp
bfs/parcel_delivery_problem/: description.txt  main.cpp
bfs/safe_travel_for_alice/: description.md  main.cpp
bfs/terraforming_project/: description.md  main.cpp
bin&&bit/choose_gems/: description.md  main.cpp
bin&&bit/data_classification/: main.cpp
dp/best_opponent/: main.cpp
dp/best_opponent_x/: main.cpp
dp/book_stacking_x/: main.cpp
dp/construct a sequence/: main.cpp
dp/lumberjack/: description.md  main.cpp
dp/max_matrix_sum/: main.cpp
dp/maximum_reward/: description.md  main.cpp
dp/minimum_request_Interval_rate_limiter/: description.md  main.cpp
dp/optimal_placement_of_ev_charging_stations/: description.md  main.cpp
dp/seizing_7_game/: description.md  main.cpp
graph/find_single_entry_free_region/: description.md
graph/finding_the_most_valuable_mineral_cluster/: description.md
graph/matrix_diffusion/: description.md
graph/package_delivery_station/: description.md  main.cpp
graph/precise_nucleic_acid_testing/: description.md
graph/start_multi_task_scheduling/: main.cpp
graph/we_are_a_team/: description.md  main.cpp
greedy/1.line_up_by_height/: main.cpp
greedy/bike_rental_on_green_island/: main.cpp
greedy/breach_filling/: description.md  main.cpp
greedy/child_and_complex/: main.cpp
greedy/doudizhu_straight/: main.cpp
greedy/efficient_task_scheduling/: description.md
greedy/extract_a_string/: main.cpp
greedy/greedy_merchant/: main.cpp
greedy/line_up_by_height/: description.md
greedy/minimum_adjustment_count/: description.md  main.cpp
greedy/transportation_time/: description.md
linear_algebra/: description.md
linear_list/two_pointers/binary/optimal_tree_planting_distance/: CMakeLists.txt  main.cpp
monotonic_stack/traffic_peak/: main.cpp
priority_queue/complete_tasks_to_earn_points/: description.md  main.cpp
priority_queue/cpu_scheduling_policy/: description.md
priority_queue/hot_website_statistics/: description.md  main.cpp
(+426 files in other folders)
